Bug #1052263 arm64: dts: add spi support for sharkl5pro
[root cause  ] support spi when sharkl5pro bringup
[changes     ] add spi in dtsi
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sharkl5pro
[test case]: compile ok
[reviewers   ] rain.zhang
[change_type ] new feature
[tag_product ] common

Add spi dtsi for sharkl5pro

Change-Id: Ia514f2d1188663a65f4a60420e1658f4e0c3b8bd
Signed-off-by: Rong Wu <rong.wu@xmand01.spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512.dtsi
@@ -446,3 +446,27 @@
 	clocks = <&apapb_gate CLK_I2C4_EB>,
 		 <&ap_clk CLK_AP_I2C4>, <&ext_26m>;
 };
+
+&spi0 {
+	clock-names = "enable", "spi", "source";
+	clocks = <&apapb_gate CLK_SPI0_EB>,
+		 <&ap_clk CLK_AP_SPI0>, <&pll2 CLK_TWPLL_192M>;
+};
+
+&spi1 {
+	clock-names = "enable", "spi", "source";
+	clocks = <&apapb_gate CLK_SPI1_EB>,
+		 <&ap_clk CLK_AP_SPI1>, <&pll2 CLK_TWPLL_192M>;
+};
+
+&spi2 {
+	clock-names = "enable", "spi", "source";
+	clocks = <&apapb_gate CLK_SPI2_EB>,
+		 <&ap_clk CLK_AP_SPI2>, <&pll2 CLK_TWPLL_192M>;
+};
+
+&spi3 {
+	clock-names = "enable", "spi", "source";
+	clocks = <&apapb_gate CLK_SPI3_EB>,
+		 <&ap_clk CLK_AP_SPI3>, <&pll2 CLK_TWPLL_192M>;
+};
