Bug #1079939  arm: configs: add i2c_sprd for sharkle
[root cause  ] add i2c_sprd
[changes     ] add i2c_sprd
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sharkle
[test case]:test i2c
[reviewers   ] xingxing.luo
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add i2c_sprd for sharkle

Change-Id: I62a68c44b0964754ead948766a2d441c9beba683
Signed-off-by: Chris Wu <chris.wu@unisoc.com>

--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -1844,7 +1844,7 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_PXA_PCI is not set
 # CONFIG_I2C_RK3X is not set
 # CONFIG_I2C_SIMTEC is not set
-# CONFIG_I2C_SPRD is not set
+CONFIG_I2C_SPRD=y
 # CONFIG_I2C_XILINX is not set
 # CONFIG_I2C_SPRD_HW is not set
 
