Bug #1080439 pinctrl: sprd: Add Sharkle pin controller configuration
[root cause  ] Add Sharkle pin controller configuration
[changes     ] Add Sharkle pin controller configuration
[side effects] No
[self test   ]:Yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:Yes
[confirm dependent commit]:Yes
[board]:Sharkle
[test case]:N/A
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add pin controller configuration on Sharkle Spreadtrum platform.

Change-Id: I5761118ad3f4f0759815226ad015fb4e66743d84
Signed-off-by: Qiang Lin <qiang.lin@unisoc.com>

--- a/drivers/pinctrl/sprd/Kconfig
+++ b/drivers/pinctrl/sprd/Kconfig
@@ -54,3 +54,9 @@ config PINCTRL_SPRD_PIKE2
 	depends on PINCTRL_SPRD
 	help
 	  Say Y here to enable Spreadtrum Pike2 pinctrl driver
+
+config PINCTRL_SPRD_SHARKLE
+	bool "Spreadtrum Sharkle pinctrl driver"
+	depends on PINCTRL_SPRD
+	help
+	  Say Y here to enable Spreadtrum Sharkle pinctrl driver
