--- a/arch/arm/configs/sprd_sharkl5_defconfig
+++ b/arch/arm/configs/sprd_sharkl5_defconfig
@@ -1954,6 +1954,7 @@ CONFIG_PINCTRL_SPRD_SHARKL5=y
 # CONFIG_PINCTRL_SPRD_ORCA is not set
 # CONFIG_PINCTRL_SPRD_SHARKL5PRO is not set
 # CONFIG_PINCTRL_SPRD_PIKE2 is not set
+# CONFIG_PINCTRL_SPRD_SHARKLE is not set
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
