--- a/arch/arm64/configs/sprd_roc1_defconfig
+++ b/arch/arm64/configs/sprd_roc1_defconfig
@@ -2006,6 +2006,7 @@ CONFIG_PINCTRL_SPRD_ROC1=y
 # CONFIG_PINCTRL_SPRD_ORCA is not set
 # CONFIG_PINCTRL_SPRD_SHARKL5PRO is not set
 # CONFIG_PINCTRL_SPRD_PIKE2 is not set
+# CONFIG_PINCTRL_SPRD_SHARKLE is not set
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
