--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -1782,6 +1782,7 @@ CONFIG_PINCTRL_SPRD=y
 # CONFIG_PINCTRL_SPRD_ORCA is not set
 CONFIG_PINCTRL_SPRD_SHARKL5PRO=y
 # CONFIG_PINCTRL_SPRD_PIKE2 is not set
+# CONFIG_PINCTRL_SPRD_SHARKLE is not set
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
