Bug #1066447 arm64: configs: enbale dump2pc function for orca only
[root cause  ] enbale dump2pc function for orca only
[changes     ] sprd_orca_defconfig
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:udx710
[test case]:tigger sysdump
[reviewers   ]
[change_type ] feature
[tag_product ] common
Test: tigger sysdump .

Change-Id: If167defd33fca03a63bffea304c917a9d0846082
Signed-off-by: xianzhen.wang <xianzhen.wang@unisoc.com>

--- a/arch/arm64/configs/sprd_orca_defconfig
+++ b/arch/arm64/configs/sprd_orca_defconfig
@@ -2714,7 +2714,8 @@ CONFIG_SPRD_APB_BUSMONITOR=y
 # CONFIG_SPRD_LAST_REGS is not set
 CONFIG_SPRD_DMC_MPU_CORE=y
 CONFIG_SPRD_DMC_MPU=y
-# CONFIG_SPRD_SYSDUMP is not set
+CONFIG_SPRD_SYSDUMP=y
+# CONFIG_SPRD_MINI_SYSDUMP is not set
 CONFIG_SPRD_LOOK_AT=y
 # CONFIG_SPRD_CPU_USAGE is not set
 CONFIG_SPRD_PTM=y
