Bug #1052263 arm64: config: add spi support for sharkl5pro
[root cause  ] support spi when sharkl5pro bringup
[changes     ] add spi in defconfig
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sharkl5pro
[test case]: compile ok
[reviewers   ] rain.zhang
[change_type ] new feature
[tag_product ] common

Add spi defconfig for sharkl5pro

Change-Id: Iaf6857e89d56d01f9de3d1f6ad71b2f778cc8ebb
Signed-off-by: Rong Wu <rong.wu@xmand01.spreadtrum.com>

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -1722,7 +1722,7 @@ CONFIG_SPI_PL022=y
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_ROCKCHIP is not set
 # CONFIG_SPI_SC18IS602 is not set
-# CONFIG_SPI_SPRD is not set
+CONFIG_SPI_SPRD=y
 CONFIG_SPI_SPRD_ADI=y
 # CONFIG_SPI_XCOMM is not set
 # CONFIG_SPI_XILINX is not set
