Bug #1069126 arm: config: Add efuse/adc/thermal config for sharkle
[root cause  ] project need
[changes     ] modify config
[side effects] no
[self test   ]: build ok
[download normally]: ok
[power on/off normally]: ok
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]: sp9832e
[test case]: build ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add efuse/adc/thermal/ config for sharkle

Change-Id: I61f1134d99d4c3de1447f237239464f72f90f1a7
Signed-off-by: Freeman Liu <freeman.liu@spreadtrum.com>

--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -2055,9 +2055,9 @@ CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 #
 # ACPI INT340X thermal drivers
 #
-# CONFIG_GENERIC_ADC_THERMAL is not set
+CONFIG_GENERIC_ADC_THERMAL=y
 # CONFIG_SPRD_THERMAL is not set
-# CONFIG_SPRD_DEDICATE_THERMAL is not set
+CONFIG_SPRD_DEDICATE_THERMAL=y
 # CONFIG_SPRD_CPU_COOLING is not set
 # CONFIG_SC27XX_TSENSOR_THERMAL is not set
 CONFIG_WATCHDOG=y
@@ -3339,7 +3339,7 @@ CONFIG_IIO=y
 # CONFIG_MCP320X is not set
 # CONFIG_MCP3422 is not set
 # CONFIG_NAU7802 is not set
-# CONFIG_SC27XX_ADC is not set
+CONFIG_SC27XX_ADC=y
 # CONFIG_TI_ADC081C is not set
 # CONFIG_TI_ADC0832 is not set
 # CONFIG_TI_ADC084S021 is not set
@@ -3641,9 +3641,9 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_DAX=y
 CONFIG_NVMEM=y
-# CONFIG_SPRD_EFUSE is not set
+CONFIG_SPRD_EFUSE=y
 # CONFIG_SPRD_CACHE_EFUSE is not set
-# CONFIG_SC27XX_EFUSE is not set
+CONFIG_SC27XX_EFUSE=y
 # CONFIG_STM is not set
 # CONFIG_INTEL_TH is not set
 # CONFIG_FPGA is not set
