--- a/arch/arm64/boot/dts/sprd/ud710-3h10.dts
+++ b/arch/arm64/boot/dts/sprd/ud710-3h10.dts
@@ -69,7 +69,7 @@
 
 	sprd-sysdump {
 		memory-region = <&memory>;
-		memory-region-re = <&ddrbist_reserved>, <&cp_reserved>, <&smem_reserved>;
+		memory-region-re = <&ddrbist_reserved>, <&cp_reserved>,  <&scproc_pubpm>, <&smem_reserved>;
 	};
 
 	sprd_marlin3: sprd-marlin3 {
