--- a/arch/arm64/boot/dts/sprd/ums312-3h10-4pro.dts
+++ b/arch/arm64/boot/dts/sprd/ums312-3h10-4pro.dts
@@ -675,6 +675,12 @@
 
 &sprd_headset {
 	status = "okay";
+	extcon = <&pmic_typec>;
+	mic-gpios = <&ap_gpio 16 GPIO_ACTIVE_HIGH>;
+	lr-gpios = <&ap_gpio 15 GPIO_ACTIVE_HIGH>;
+	switch-supply = <&vddusb33>;
+	sprd,switch-voltage = <3300000>;
+	sprd,3pole-adc-threshold = <112>;
 };
 
 &sprd_audio_codec_ana {
