Bug #1067321 arm64: configs: dmaengine: Open DMA configuration
[root cause  ] Open DMA configuration
[changes     ] config file
[side effects] no effect
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:dma ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Open DMA configuration to make it work on pike2 platform.

Change-Id: Ia38c86b17b062aac0a428026a0ce4604bb0dfcec
Signed-off-by: Brian Liu <Brian.Liu@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -2952,6 +2952,7 @@ CONFIG_DMADEVICES=y
 # DMA Devices
 #
 CONFIG_DMA_ENGINE=y
+CONFIG_DMA_VIRTUAL_CHANNELS=y
 CONFIG_DMA_OF=y
 # CONFIG_ALTERA_MSGDMA is not set
 # CONFIG_AMBA_PL08X is not set
@@ -2959,7 +2960,7 @@ CONFIG_DMA_OF=y
 # CONFIG_INTEL_IDMA64 is not set
 # CONFIG_NBPFAXI_DMA is not set
 # CONFIG_PL330_DMA is not set
-# CONFIG_SPRD_DMA is not set
+CONFIG_SPRD_DMA=y
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
 # CONFIG_DW_DMAC is not set
