Bug #1087041 arm64: sprd_sharkl5Pro_defconfig: add wcn deconfig for sharkl5pro
[root cause  ] add wcn deconfig for ums512
[changes     ] sprd_sharkl5Pro_defconfig
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:yes
[board]:ums512
[test case]:wcn run successfully
[reviewers   ] jingxiang.li
[change_type ] bringup --> sprd_chip_support
[tag_product ] common
Test: make test-art

The patch adds wcn deconfig for sharkl5pro.

Change-Id: Id49c1b58ccb13307277c89118acc44e28b98bc66
Signed-off-by: Chaofan.Wang <Chaofan.Wang@unisoc.com>

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -1271,9 +1271,15 @@ CONFIG_MEMORY_STATE_TIME=y
 #
 # Spreadtrum WCN Device Drivers
 #
-# CONFIG_SC23XX is not set
-# CONFIG_WCN_BOOT is not set
-# CONFIG_WCN_UTILS is not set
+CONFIG_SC23XX=y
+# CONFIG_SC2342_INTEG is not set
+# CONFIG_SC2355 is not set
+CONFIG_UMW2652=y
+CONFIG_SDIOHAL=y
+CONFIG_WCN_SLP=y
+# CONFIG_WCN_PCIE is not set
+CONFIG_WCN_BOOT=y
+CONFIG_WCN_UTILS=y
 
 #
 # Spreadtrum Audio Assistant Modules
