Bug #1079673 arm: config: Open sprd_sdhc10 config driver for building the sprd_sdhc10.c/.h
[root cause  ] kernel upgrate
[changes     ] sprd_pike2_defconfig
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:normal test
[reviewers   ] Billows.Wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Open the sprd_sdhcr10 config for building the sprd_sdhc10.c/.h.

Change-Id: I14a859b1c6b430b4c84d0e6856620a7f61698f8c
Signed-off-by: Xuefei Wang <xuefei.wang@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -2762,7 +2762,7 @@ CONFIG_MMC_BLOCK_MINORS=16
 #
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_ARMMMCI is not set
-# CONFIG_MMC_SPRD_SDHCR10 is not set
+CONFIG_MMC_SPRD_SDHCR10=y
 # CONFIG_MMC_SDHCI is not set
 # CONFIG_MMC_SPI is not set
 # CONFIG_MMC_SPRD_SDHCR11 is not set
