--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -2859,7 +2859,7 @@ CONFIG_RTC_I2C_AND_SPI=y
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
 # CONFIG_RTC_DRV_V3020 is not set
-# CONFIG_RTC_DRV_SC27XX is not set
+CONFIG_RTC_DRV_SC27XX=y
 # CONFIG_RTC_DRV_ZYNQMP is not set
 
 #
