--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -1846,7 +1846,7 @@ CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_SYSCON_REBOOT_MODE is not set
-# CONFIG_POWER_RESET_SC27XX is not set
+CONFIG_POWER_RESET_SC27XX=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
@@ -3341,7 +3341,7 @@ CONFIG_SPRD_TIMER=y
 # Qualcomm SoC drivers
 #
 CONFIG_SPRD_MEMDISK=y
-# CONFIG_SPRD_7SRESET is not set
+CONFIG_SPRD_7SRESET=y
 # CONFIG_SPRD_PMIC_SYSCON is not set
 CONFIG_SPRD_IOMMU=y
 
