--- a/arch/arm64/boot/dts/sprd/roc1.dtsi
+++ b/arch/arm64/boot/dts/sprd/roc1.dtsi
@@ -911,74 +911,6 @@
 				sprd,dl-fifo-depth = <4096>;
 			};
 
-			ipa_sys: sipa-sys {
-				compatible = "sprd,roc1-sipa-sys";
-				syscons =  <&pmu_apb_regs
-					  REG_PMU_APB_IPA_FORCE_WAKEUP_CFG
-					  MASK_PMU_APB_IPA_FORCE_WAKEUP>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PD_IPA_SYS_CFG
-					  MASK_PMU_APB_PD_IPA_SYS_FORCE_SHUTDOWN>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PD_IPA_SYS_CFG
-					  MASK_PMU_APB_PD_IPA_SYS_AUTO_SHUTDOWN_EN>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_FORCE_DEEP_SLEEP_CFG
-					  MASK_PMU_APB_IPA_FORCE_DEEP_SLEEP>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_IPA_DSLP_ENA
-					  MASK_PMU_APB_IPA_DSLP_ENA>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_FORCE_LIGHT_SLEEP_CFG
-					  MASK_PMU_APB_IPA_FORCE_LIGHT_SLEEP>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_LIGHT_SLEEP_ENABLE
-					  MASK_PMU_APB_IPA_LSLP_ENA>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_LIGHT_SLEEP_ENABLE
-					  MASK_PMU_APB_IPA_SMART_LSLP_ENA>,
-					  <&ipa_ahb_regs
-					  REG_IPA_AHB_IPA_EB
-					  MASK_IPA_AHB_IPA_EB>,
-					  <&ipa_ahb_regs
-					  REG_IPA_AHB_IPA_EB
-					  MASK_IPA_AHB_CM4_EB>,
-					  <&ipa_ahb_regs
-					  REG_IPA_AHB_MAIN_MTX_LPC
-					  MASK_REG_FW0_IPA_S3_LPC_RD_SEC>,
-					  <&ipa_ahb_regs
-					  REG_IPA_AHB_S5_LPC
-					  MASK_REG_FW0_IPA_S3_LPC_WR_SEC>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PCIEPLL_H_REL_CFG
-					  MASK_PMU_APB_PCIEPLL_H_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PCIEPLL_V_REL_CFG
-					  MASK_PMU_APB_PCIEPLL_V_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_XTLBUF_PCIEH_REL_CFG
-					  MASK_PMU_APB_XTLBUF_PCIEH_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_XTLBUF_PCIEV_REL_CFG
-					  MASK_PMU_APB_XTLBUF_PCIEV_IPA_SEL>;
-
-				syscon-names = "ipa-sys-forcewakeup",
-						"ipa-sys-forceshutdown",
-						"ipa-sys-autoshutdown",
-						"ipa-sys-forcedslp",
-						"ipa-sys-dslpen",
-						"ipa-sys-forcelslp",
-						"ipa-sys-lslpen",
-						"ipa-sys-smartlslpen",
-						"ipa-sys-ipaeb",
-						"ipa-sys-cm4eb",
-						"ipa-sys-autogaten",
-						"ipa-sys-s5-autogaten",
-						"ipa-sys-pciepllhsel",
-						"ipa-sys-pciepllvsel",
-						"ipa-sys-xtlbufpciehsel",
-						"ipa-sys-xtlbufpcievsel";
-			};
 		};
 
 		ap-ahb {
@@ -2283,19 +2215,7 @@
 					  MASK_REG_FW0_IPA_S3_LPC_RD_SEC>,
 					  <&ipa_ahb_regs
 					  REG_IPA_AHB_S5_LPC
-					  MASK_REG_FW0_IPA_S3_LPC_WR_SEC>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PCIEPLL_H_REL_CFG
-					  MASK_PMU_APB_PCIEPLL_H_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_PCIEPLL_V_REL_CFG
-					  MASK_PMU_APB_PCIEPLL_V_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_XTLBUF_PCIEH_REL_CFG
-					  MASK_PMU_APB_XTLBUF_PCIEH_IPA_SEL>,
-					  <&pmu_apb_regs
-					  REG_PMU_APB_XTLBUF_PCIEV_REL_CFG
-					  MASK_PMU_APB_XTLBUF_PCIEV_IPA_SEL>;
+					  MASK_REG_FW0_IPA_S3_LPC_WR_SEC>;
 
 				syscon-names =
 					"ipa-sys-forcewakeup",
@@ -2309,11 +2229,7 @@
 					"ipa-sys-ipaeb",
 					"ipa-sys-cm4eb",
 					"ipa-sys-autogaten",
-					"ipa-sys-s5-autogaten",
-					"ipa-sys-pciepllhsel",
-					"ipa-sys-pciepllvsel",
-					"ipa-sys-xtlbufpciehsel",
-					"ipa-sys-xtlbufpcievsel";
+					"ipa-sys-s5-autogaten";
 				#power-domain-cells = <0>;
 
 				vddipa:vdd-ipa {
