Bug #1088765 arm64: dts: add BT dts config for sharkl5Pro
[root cause  ] add bt dts config for sharkl5Pro
[changes     ] ums512-1h10.dts
[side effects] none
[self test   ]:pass
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:dependent
[board]:ums512-1h10
[test case]:bt
[reviewers   ] steven.chen quan.li
[change_type ] bringup --> sprd_chip_support
[tag_product ] common
Test: make test-art

The patch adds bt dts config for sharkl5pro.

Change-Id: I37da9c20d1ed622402c3270d6c8e88b88a686b5e
Signed-off-by: Xing.Xiong <Xing.Xiong@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -129,6 +129,16 @@
 		post-power-on-delay-ms = <20>;
 	};
 
+	sprd-mtty {
+		compatible = "sprd,mtty";
+		sprd,name = "ttyBT";
+	};
+
+	sprd-fm {
+		compatible = "sprd,marlin3-fm";
+		sprd,name = "sprd-fm";
+	};
+
 	dvfs_dcdc_cpu0_supply: dvfs-dcdc-cpu0-supply {
 		top-dvfs-adi-state = <0x70 0 0xf>;
 		voltage-grade-num = <7>;
