Bug #1052266 arm: dts: Add ADI controller DTS nodes
[root cause  ] Add ADI controller DTS nodes
[changes     ] Add ADI controller DTS nodes
[side effects] N/A
[self test   ]:yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:Yes
[board]:sharkle
[test case]:N/A
[reviewers   ] bruce.chen baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add ADI controller DTS nodes on Spreadtrum sharkle platform.

Change-Id: I394ed02895eac86779feb974314cb928473f8dca
Signed-off-by: Luting Guo <luting.guo@unisoc.com>

--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -223,6 +223,15 @@
 				compatible = "sprd,sharkle-pinctrl";
 				reg = <0x402a0000 0x10000>;
 			};
+
+			adi_bus: spi@40380000 {
+				compatible = "sprd,sharkl3-adi",
+					"sprd,sharkle-adi";
+				reg = <0x40380000 0x10000>;
+				hwlocks = <&hwlock 0>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+			};
 		};
 	};
 };
