--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -1071,7 +1071,11 @@ CONFIG_WIRELESS=y
 #
 CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_WIMAX is not set
-# CONFIG_RFKILL is not set
+CONFIG_RFKILL=y
+CONFIG_RFKILL_PM=y
+CONFIG_RFKILL_LEDS=y
+# CONFIG_RFKILL_INPUT is not set
+# CONFIG_RFKILL_GPIO is not set
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 # CONFIG_NET_9P_DEBUG is not set
@@ -1416,6 +1420,7 @@ CONFIG_USB_NET_DRIVERS=y
 # CONFIG_USB_RTL8152 is not set
 # CONFIG_USB_LAN78XX is not set
 # CONFIG_USB_USBNET is not set
+# CONFIG_USB_HSO is not set
 # CONFIG_USB_IPHETH is not set
 CONFIG_WLAN=y
 # CONFIG_WIRELESS_WDS is not set
