--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -249,6 +249,22 @@
 	status = "okay";
 };
 
+&aon_i2c0 {
+	status = "okay";
+	clock-frequency = <400000>;
+
+	fan53555_dcdc: regulator@60 {
+		compatible = "fcs,fan53555";
+		reg = <0x60>;
+		regulator-name = "fan53555";
+		regulator-min-microvolt = <600000>;
+		regulator-max-microvolt = <1230000>;
+		regulator-ramp-delay = <64000>;
+		regulator-always-on;
+		fcs,suspend-voltage-selector = <1>;
+	};
+};
+
 &sdio0 {
 	bus-width = <4>;
 	sprd,name = "sdio_sd";
